# voice_llm_assistent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  st_app.py  streamlit_app.py  voice_service.py
.railway/: settings.json
.streamlit/: secrets.toml
rag/: AIVoiceAssistant.py  restaurant_file.txt
voice_assistant/: __init__.py  __main__.py  assistant.py  audio.py  cli.py  config.py  conversation.py  logging_config.py  prompts.py  rag.py  transcription.py  tts.py  web.py
